# haviz

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pnpm-lock.yaml  test_zalo_web.swift  zalo_web_scan.js
.github/workflows/: ci.yml
agent/: .gitignore  Cargo.toml  Makefile
agent/.cargo/: config.toml
agent/helpers/: zalo_reader.swift  zalo_web_debug  zalo_web_debug.swift  zalo_web_reader.swift
agent/src/: ai.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  message_parser.rs  polling.rs  server.rs
agent/src/app/: app_config.rs  ipc.rs  mod.rs  tray.rs  webview.rs
agent/src/channels/: mod.rs  traits.rs  zalo_desktop.rs  zalo_desktop_windows.rs  zalo_web.rs
agent/src/db/: migrations.rs  mod.rs  queries_conversations.rs  queries_drafts.rs  queries_messages.rs  queries_templates.rs
agent/src/platform/: mod.rs
agent/src/platform/macos/: accessibility.rs  automation.rs  mod.rs  osascript.rs
agent/src/platform/windows/: input.rs  mod.rs  uiautomation.rs
agent/src/routes/: ai_draft.rs  mod.rs  screenshot.rs  zalo_accumulator.rs  zalo_control.rs  zalo_db_handlers.rs  zalo_scripts.rs
agent/src/safety/: content_safety.rs  health_monitor.rs  human_delay.rs  mod.rs  rate_limiter.rs  working_hours.rs
agent/static/: index.html
agent/tests/: test_ax_deep.swift
apps/api/: package.json  tsconfig.json
apps/web/: index.html  package.json  vite.config.ts  vitest.config.ts
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
extensions/chrome/: manifest.json
plans/260319-1052-fix-project-weaknesses/: phase-01-bootstrap-backend-api.md  phase-02-auth-and-security.md  phase-03-modularize-agent.md  phase-04-windows-support.md  phase-05-testing-and-ci.md  phase-06-safety-engine.md  plan.md
plans/reports/: docs-manager-260319-1042-initial-documentation.md  docs-manager-260319-1614-documentation-update-phase1-ui-improvements.md  fullstack-developer-260319-1102-phase-1-bootstrap-api.md  fullstack-developer-260319-1103-modularize-rust-agent.md  fullstack-developer-260319-1116-windows-platform-implementation.md  fullstack-developer-260319-1127-phase5-testing-cicd.md  fullstack-developer-260319-1128-safety-engine.md  fullstack-developer-260319-1415-haviz-ui-redesign.md  fullstack-developer-260319-1652-zalo-message-accumulation.md
validation/agent/: agent-prototype.js  ai-draft.js
validation/ax-api/: test_ax.swift  test_each_msg.swift  test_read_messages.swift
validation/browsers/: test_browser_ax.swift  test_browser_send.js
validation/chrome-headless/: test_zalo.js
zalo-ext/: manifest.json
(+63 files in other folders)
