[package]
name = "haviz-agent"
version = "0.1.0"
edition = "2021"
description = "Haviz Desktop Agent — Local-first Zalo automation + AI drafts"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
wry = "0.47"
tao = "0.32"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
